adiciona feature de sortear times balanceados

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ local.properties
 .cxx/
 *.keystore
 !debug.keystore
+android/app/debug/app-debug.apk
+android/app/release/app-release.apk
 
 # node.js
 #
